--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 
 
   @theme {
-    --font-family-primary: 'PPAgrandir', ui-sans-serif, system-ui, sans-serif;
+    --font-primary: 'PPAgrandir', ui-sans-serif, system-ui, sans-serif;
 
   }
 
