--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,19 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: 'Manrope';
+  src: url('/fonts/Manrope-VariableFont_wght.ttf') format('type');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
 
 
   @theme {
     --font-primary: 'PPAgrandir', ui-sans-serif, system-ui, sans-serif;
+    --font-secondary: 'Manrope', ui-sans-serif, system-ui, sans-serif;
 
   }
 
