--- a/src/sections/Faq.css
+++ b/src/sections/Faq.css
@@ -1,11 +1,11 @@
 .bgstill {
-  background-image: url("./stillbg.webp");
+  background-image: url("/stillbg.webp");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 .faqbg{
-      background-image: url("./faqbg.webp");
+      background-image: url("/faqbg.webp");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
