--- a/src/sections/NewWay.css
+++ b/src/sections/NewWay.css
@@ -1,5 +1,5 @@
 .growbg{
-    background-image: url("./growbg.webp");
+    background-image: url("/growbg.webp");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
