--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,18 @@
     --font-secondary: 'Manrope', ui-sans-serif, system-ui, sans-serif;
 
   }
+/* 
+  html, body, #root {
+  height: 100vh;
+  margin: 0;
+  background-color: #f7f5f9;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: left;
+} */
+
 
 body{
     font-family: "Poppins", sans-serif;
